abandonmatch esta eliminado del todo, pero las estadisticas siguen sin ir
